--- a/FacebookEmptyArchive/manifest.json
+++ b/FacebookEmptyArchive/manifest.json
@@ -1,9 +1,9 @@
 {
     "manifest_version": 2,
-    "name": "Utils",
+    "name": "Facebook Empty Archive",
     "version": "1.0",
 
-    "description": "This extension is a personal utilitary one for some tasks I do in a regular basis.",
+    "description": "This extension is used to empty the archive of the 'Saved articles' on Facebook automatically.",
     "icons": {
         "16": "img/icon16.png",
         "48": "img/icon48.png",
@@ -13,10 +13,9 @@
         "scripts": ["background.js"],
         "persistent": false
     },
-    "options_page": "options.html",
     "page_action": {
-        "default_title": "Utils"
-        // "default_popup": "popup.html"
+        "default_title": "Facebook Empty Archive",
+        "default_popup": "popup.html"
     },
     "permissions": [
         "declarativeContent",
