Add option to disable page reload.

--- a/CookiesDeleter/manifest.json
+++ b/CookiesDeleter/manifest.json
@@ -13,8 +13,13 @@
         "default_title": "Cookies Deleter",
         "default_popup": "popup.html"
     },
+    "options_ui": {
+        "page": "options.html",
+        "chrome_style": true
+    },
     "permissions": [
         "cookies",
+        "storage",
         "tabs",
         "http://*/*",
         "https://*/*"
